[gd_scene load_steps=4 format=3 uid="uid://b1ily80m1vtfi"]

[ext_resource type="Script" path="res://Menu.gd" id="1_45tml"]

[sub_resource type="SystemFont" id="SystemFont_q25a1"]
font_names = PackedStringArray("Constantia")

[sub_resource type="Theme" id="Theme_j8bpy"]
default_font = SubResource("SystemFont_q25a1")

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_45tml")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1150.0
offset_bottom = 650.0
theme = SubResource("Theme_j8bpy")
alignment = 1

[node name="Play3D" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play Vegetable Ninja
"

[node name="Play2D" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play 2D Platformer Template"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit
"

[connection signal="button_up" from="VBoxContainer/Play3D" to="." method="_on_play_3d_button_up"]
[connection signal="button_up" from="VBoxContainer/Play2D" to="." method="_on_play_2d_button_up"]
[connection signal="button_up" from="VBoxContainer/Quit" to="." method="_on_quit_button_up"]
